# lazy_errors

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.j2  README.md  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: not_dependabot.yaml  publish.yaml  validate.yaml  validate_git_head.yaml  validate_history.yaml  validate_pr_commits.yaml  validate_pull_request.yaml
lazy_errors/: Cargo.toml
lazy_errors/src/: boxed.rs  err.rs  error.rs  eyre.rs  into_eyre.rs  lib.rs  or_create_stash.rs  or_stash.rs  or_wrap.rs  or_wrap_with.rs  prelude.rs  reportable.rs  stash.rs  stash_err.rs  stashable.rs  try2.rs  try_collect_or_stash.rs  try_map_or_stash.rs
lazy_errors/src/surrogate_error_trait/: mod.rs  prelude.rs
xtask/: Cargo.toml
xtask/src/: ci.rs  main.rs  version.rs
