[package]
name = "lazy_errors"
description = "Effortlessly create, group, and nest arbitrary errors, and defer error handling ergonomically."
keywords = ["error-handling", "multiple", "errors", "tree", "no-std"]
categories = ["rust-patterns", "no-std"]
edition = "2021"
readme = "../README.md"
authors = ["Andreas Waidler <lintermute@mailbox.org>"]
repository = "https://github.com/Lintermute/lazy_errors"
license = "MIT OR Apache-2.0"
version = "0.0.0"

[features]
default = [
  "rust-v1.81",
  "rust-v1.77",
  "rust-v1.69",
  "rust-v1.66",
  "rust-v1.64",
]
eyre = ["std", "dep:eyre"]
std = []
"rust-v1.81" = []
"rust-v1.77" = []
"rust-v1.69" = []
"rust-v1.66" = []
"rust-v1.64" = []

[package.metadata."docs.rs"]
all-features = true

[dependencies]
eyre = { version = "0.6.2", optional = true }

[dev-dependencies]
indoc = "2.0.5"
thiserror = "2.0.0"
