[package]
name = "xtask"
edition = "2021"
authors = ["Andreas Waidler <lintermute@mailbox.org>"]
license = "MIT OR Apache-2.0"
version = "0.0.0"
publish = false

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }

# `clap` needs the `FromStr` implementations to return `std::error::Error`.
# Furthermore, `xtask` needs to use several parts of `std` anyways,
# so we could just enable the flag for `lazy_errors` as well,
# making sure `lazy_errors` builds even on old Rust versions.
lazy_errors = { path = "../lazy_errors", features = ["std"] }

[dev-dependencies]
test-case = "3.1.0"
